// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Device launch-args editor deprecation warnings should log warnings on .get(options) call 1`] = `
"Detected an attempt to use device.launchArgs.get(...) with a deprecated 'options' parameter.
Please use device.appLaunchArgs.get(...) instead.
For more details, see the reference at: https://wix.github.io/Detox/docs/api/device-object-api#deviceapplaunchargs
"
`;

exports[`Device launch-args editor deprecation warnings should log warnings on .get(options) call 2`] = `
"Detected an attempt to use device.launchArgs.get(...) with a deprecated 'options' parameter.
Please use device.appLaunchArgs.shared.get(...) instead.
For more details, see the reference at: https://wix.github.io/Detox/docs/api/device-object-api#deviceapplaunchargs
"
`;

exports[`Device launch-args editor deprecation warnings should log warnings on .modify(..., options) call 1`] = `
"Detected an attempt to use device.launchArgs.modify(...) with a deprecated 'options' parameter.
Please use device.appLaunchArgs.modify(...) instead.
For more details, see the reference at: https://wix.github.io/Detox/docs/api/device-object-api#deviceapplaunchargs
"
`;

exports[`Device launch-args editor deprecation warnings should log warnings on .modify(..., options) call 2`] = `
"Detected an attempt to use device.launchArgs.modify(...) with a deprecated 'options' parameter.
Please use device.appLaunchArgs.shared.modify(...) instead.
For more details, see the reference at: https://wix.github.io/Detox/docs/api/device-object-api#deviceapplaunchargs
"
`;

exports[`Device launch-args editor deprecation warnings should log warnings on .reset(options) call 1`] = `
"Detected an attempt to use device.launchArgs.reset(...) with a deprecated 'options' parameter.
Please use device.appLaunchArgs.reset(...) instead.
For more details, see the reference at: https://wix.github.io/Detox/docs/api/device-object-api#deviceapplaunchargs
"
`;

exports[`Device launch-args editor deprecation warnings should log warnings on .reset(options) call 2`] = `
"Detected an attempt to use device.launchArgs.reset(...) with a deprecated 'options' parameter.
Please use device.appLaunchArgs.shared.reset(...) instead.
For more details, see the reference at: https://wix.github.io/Detox/docs/api/device-object-api#deviceapplaunchargs
"
`;
